[gd_scene load_steps=8 format=3 uid="uid://cudb68mmcvhtg"]

[ext_resource type="PhysicsMaterial" uid="uid://lstnlgl40uhj" path="res://PhysicsTest/deer_body_physmat.tres" id="1_5w3g6"]
[ext_resource type="Script" uid="uid://c6lr6h2gib2gb" path="res://PhysicsTest/deer.gd" id="2_3tavr"]
[ext_resource type="PackedScene" uid="uid://3t06e673ici5" path="res://PhysicsTest/deer_legs.tscn" id="3_3tavr"]
[ext_resource type="Material" uid="uid://b13ie36bwv7v7" path="res://PhysicsTest/deer_fur_mat.tres" id="3_55ta0"]
[ext_resource type="PackedScene" uid="uid://bc8mts2tx04hn" path="res://PhysicsTest/Reindeer.glb" id="4_gjcat"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mhl8m"]
material = ExtResource("3_55ta0")
radius = 0.25
height = 1.3
radial_segments = 16

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e1i74"]
radius = 0.25976563
height = 1.3544922

[node name="DeerPhysicsTest" type="RigidBody3D"]
collision_layer = 3
collision_mask = 3
mass = 50.0
physics_material_override = ExtResource("1_5w3g6")
angular_damp = 0.01
script = ExtResource("2_3tavr")

[node name="DeerLegs" parent="." instance=ExtResource("3_3tavr")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1.9106859e-15, -4.371139e-08, -1, -0.9955554, 0.094177775, -4.1166435e-09, 0.094177775, 0.9955554, -4.3517108e-08, 0, 0.46994323, 0.040073633)
mesh = SubResource("CapsuleMesh_mhl8m")

[node name="Reindeer" parent="." instance=ExtResource("4_gjcat")]
transform = Transform3D(-0.25, 0, 2.1855694e-08, 0, 0.25, 0, -2.1855694e-08, 0, -0.25, 1.1172327, -0.28298306, 0.07150647)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.080442436, -0.99675924, 0, 0.99675924, 0.080442436, 0, 0.46994323, 0.040937603)
shape = SubResource("CapsuleShape3D_e1i74")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, 0)
depth = 0.75
polygon = PackedVector2Array(0.8477053, -0.00057055056, 0.9509317, -0.113535166, 0.8671822, -0.1778082, 0.7912232, -0.2264998, 0.6957876, -0.2615578, 0.59840435, -0.28298217, 0.22055706, -0.29856348, -0.7747007, -0.30051112, -0.68705577, -0.16806984)

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_top = 90.0
offset_right = 127.0
offset_bottom = 141.0

[node name="MoveButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "MoveDeerBody"

[node name="PhysicsStats" type="Label" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="button_down" from="BoxContainer/MoveButton" to="." method="_on_move_button_button_down"]
[connection signal="button_up" from="BoxContainer/MoveButton" to="." method="_on_move_button_button_up"]
